@@ -3,9 +3,18 @@
 		"guest_os_type": "Windows7",
 		{% include 'snippets/builder_virtualbox_windows.json' %},
 
-		"iso_url": "file://{{ iso_path }}/en_windows_7_professional_with_sp1_x86_dvd_u_677056.iso",
-		"iso_checksum": "d89937df3a9bc2ec1a1486195fd308cd3dade928",
-		"iso_checksum_type": "sha1",
+		{% if trial != 'true' %}
+			"iso_url": "file://{{ iso_path }}/en_windows_7_professional_with_sp1_x86_dvd_u_677056.iso",
+			"iso_checksum": "d89937df3a9bc2ec1a1486195fd308cd3dade928",
+			"iso_checksum_type": "sha1",
+		{% else %}
+			"iso_urls": [
+				"file://{{ iso_path }}/7600.16385.090713-1255_x86fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENEVAL_EN_DVD.iso",
+				"http://care.dlservice.microsoft.com/dl/download/evalx/win7/x86/EN/7600.16385.090713-1255_x86fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENEVAL_EN_DVD.iso"
+			],
+			"iso_checksum": "971fc00183a52c152fe924a6b99fdec011a871c2",
+			"iso_checksum_type": "sha1",
+		{% endif %}
 
 		"floppy_files": [
 			"{{ cache_dir }}/Autounattend.xml",
@@ -18,7 +27,7 @@
 
 	"provisioners": [
 
-	{% include 'snippets/provision_powershell.json' %}
+	{% include 'snippets/provision_powershell_win7.json' %}
 
 	{% if tools_path %},
 		{% include 'snippets/tools.json' %}
