@@ -1,4 +1,5 @@
-﻿iex ((New-Object Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+﻿# ExecutionPolicy is previously set to Unrestricted in Autounattend.xml
+iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
 # For some reason, AutoHotkey.portable wasn't working with WinPcap, so use the full installation
 cinst autohotkey -y
